--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,8 +63,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="products" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false" style="color:darkgray">Products</a>
             <ul class="dropdown-menu" aria-labelledby="dropdown03">
-              <li><a class="dropdown-item" href="#" style="color:darkgray">Candles</a></li>
-              <li><a class="dropdown-item" href="#" style="color:darkgray">Soaps</a></li>
+              <li><a class="dropdown-item" href="products/candles" style="color:darkgray">Candles</a></li>
+              <li><a class="dropdown-item" href="products/soaps" style="color:darkgray">Soaps</a></li>
             </ul>
           </li>
         </ul>
