--- a/src/main/resources/templates/editProduct.html
+++ b/src/main/resources/templates/editProduct.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -15,7 +14,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+    <link href="../static/form-validation.css" rel="stylesheet">
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -75,45 +74,82 @@
             </div>
           </div>
         </nav>
-      </header>
+    </header>
 
-<main style="background-color: #FFF0ED;">
-
-  <section class="py-5 text-center container" style="background-color: #FFF0ED;">
-    <div class="row py-lg-5" style="background-color: #FFF0ED;">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Candles</h1>
-        <p class="lead text-muted">The best for your house and skin</p>
-      </div>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-        <div class="col" th:each="product : ${products}">
-          <div class="card shadow-sm">
-            <img th:src="${product.url}" alt="Candle">
-            <div class="card-body">
-              <h3 th:text = "${product.name}"></h3>
-              <p class="card-text" th:text= "${product.description}"></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-muted" th:text = "${product.price}">US$</small>
-              </div>
+    <main style="background-color: #FFF0ED;">
+        <section class="py-5 text-center container" style="background-color: #FFF0ED;" th:each="product: ${products}">
+            <div class="row py-lg-5" style="background-color: #FFF0ED;">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 th:text = "${product.name}"></h1>
+                
             </div>
-          </div>
-        </div>
-    
-      </div>
-    </div>
-  </div>
+            </div>
+        </section>
+    </main>
 
-</main>
+    <div class="col-md-7 col-lg-8" style="display: block; margin-left: auto; margin-right: auto;" th:each="product: ${products}">
+      <br>
+      <img class="card shadow-sm" th:src="${product.url}" alt="Candle">
+        <form class="needs-validation" novalidate>
+        <div class="row g-3">
+            <div class="col-12">
+                <label for="name" class="form-label">Name</label>
+                <input type="text" class="form-control" id="name" th:placeholder="${product.name}" value="" required>
+                <div class="invalid-feedback">
+                    Valid name is required.
+                </div>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <label for="description" class="form-label">Description</label>
+                <textarea class="form-control"  th:placeholder="${product.description}" id="description" rows="3"></textarea>
+                <div class="invalid-feedback">
+                    Description is required.
+                </div>
+            </div>
+
+            <div class="col-12">
+                <label for="category" class="form-label">Category</label>
+                <select class="form-select" id="category" required>
+                    <option value="">Choose...</option>
+                    <option value="candles" >Candles</option>
+                    <option value="soaps" >Soaps</option>
+                </select>
+                <div class="invalid-feedback">
+                    Please select a valid category.
+                </div>
+            </div>
+
+            <div class="col-12">
+                <label for="price" class="form-label">Price</label>
+                <div class="input-group has-validation">
+                  <span class="input-group-text">US$</span>
+                  <input type="text" class="form-control" id="price" th:placeholder="${product.price}" required>
+                <div class="invalid-feedback">
+                    Price is required
+                  </div>
+                </div>
+              </div>
+
+            <div class="col-12">
+                <label for="stock" class="form-label">Stock</label>
+                <div class="input-group has-validation">
+                  <input type="text" class="form-control" id="stock" placeholder="3" required>
+                <div class="invalid-feedback">
+                    Stock is required
+                  </div>
+                </div>
+              </div>
+              <br>
+            <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+            <button class="btn btn-danger btn-lg" type="cancel">Cancel</button>
+        </div>
+        
+
+        </form>
+    </div>
+
 
 <footer class="text-muted py-5">
   <div class="container">
