--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,37 +45,40 @@
   </head>
   <body>
     
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-white">
-    <div class="container-fluid" >
-      <a class="navbar-brand" href="#" style="color:darkgray">Gama Glamour</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style="color:darkgray">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="color:darkgray">About Us</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="products" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false" style="color:darkgray">Products</a>
-            <ul class="dropdown-menu" aria-labelledby="dropdown03">
-              <li><a class="dropdown-item" href="products/candles" style="color:darkgray">Candles</a></li>
-              <li><a class="dropdown-item" href="products/soaps" style="color:darkgray">Soaps</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-white">
+      <div class="container-fluid" >
+        <a class="navbar-brand" href="#" style="color:darkgray">Gama Glamour</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="home" style="color:darkgray">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color:darkgray">About Us</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="products" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false" style="color:darkgray">Products</a>
+              <ul class="dropdown-menu" aria-labelledby="dropdown03">
+                <li><a class="dropdown-item" href="products/candles" style="color:darkgray">Candles</a></li>
+                <li><a class="dropdown-item" href="products/soaps" style="color:darkgray">Soaps</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color:darkgray">Login</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
 
 <main>
 
