--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,9 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.83.1">
-    <title>Products</title>
+    <title>Signin Template · Bootstrap v5.0</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sign-in/">
 
     
 
@@ -43,9 +43,10 @@
     </style>
 
     
+    <!-- Custom styles for this template -->
+    <link href="../static/signin.css" rel="stylesheet">
   </head>
-  <body>
-    
+  <body class="text-center" style="background-color: #FFEDF2;">
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-white">
           <div class="container-fluid" >
@@ -56,17 +57,22 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="home.html" style="color:darkgray">Home</a>
+                  <a class="nav-link active" aria-current="page" href="home" style="color:darkgray">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#" style="color:darkgray">About Us</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="products.html" style="color:darkgray">Products</a>
+
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="products" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false" style="color:darkgray">Products</a>
+                  <ul class="dropdown-menu" aria-labelledby="dropdown03">
+                    <li><a class="dropdown-item" href="products/candles" style="color:darkgray">Candles</a></li>
+                    <li><a class="dropdown-item" href="products/soaps" style="color:darkgray">Soaps</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="color:darkgray">Login</a>
-                </li>
+                    <a class="nav-link" href="#" style="color:darkgray">Login</a>
+                  </li>
               </ul>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -76,58 +82,31 @@
           </div>
         </nav>
       </header>
-
-<main style="background-color: #FFF0ED;">
-
-  <section class="py-5 text-center container" style="background-color: #FFF0ED;">
-    <div class="row py-lg-5" style="background-color: #FFF0ED;">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Candles</h1>
-        <p class="lead text-muted">The best for your house and skin</p>
-      </div>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-        <div class="col" th:each="product : ${products}">
-          <div class="card shadow-sm">
-            <img th:src="${product.url}" alt="Candle">
-            <div class="card-body">
-              <h3 th:text = "${product.name}"></h3>
-              <p class="card-text" th:text= "${product.description}"></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-muted" th:text = "${product.price}">US$</small>
-              </div>
-            </div>
-          </div>
-        </div>
     
-      </div>
-    </div>
-  </div>
+    <main class="form-signin">
+    <form>
+        <img src="https://i.ibb.co/x3tBsfq/Logo-Gama-Glamour.png" alt="Logo-Gama-Glamour">
+        <h1 class="h3 mb-3 fw-normal">Login</h1>
+        <div class="form-floating">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
+        </div>
+        <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password</label>
+        </div>
 
-</main>
-
-<footer class="text-muted py-5">
-  <div class="container">
-    <p class="float-end mb-1">
-      <a href="#">Back to top</a>
-    </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/docs/5.0/getting-started/introduction/">getting started guide</a>.</p>
-  </div>
-</footer>
+        <div class="checkbox mb-3">
+        <label>
+            <input type="checkbox" value="remember-me"> Remember me
+        </label>
+        </div>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+    </form>
+    </main>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-  
-      
+    
   </body>
 </html>
